@@ -9,15 +9,16 @@
 // NOTE: This header gets inserted above the </body> tag. 
 ?>
 
-    </td>
-  </tr>
-  <tr>
-    <td class="modfooter">
-    <!-- The Gallery code version number, linked to the Gallery home page -->
-    <table width="100%" ><tr><td>
-    <span class="fineprint">
-    <?php print poweredBy() ?>
-    </span>
+    <table width="100%" cellspacing="0" cellpadding="0">
+      <tr>
+        <td class="modfooter">
+          <!-- The Gallery code version number, linked to the Gallery home page -->
+          <table width="100%" >
+	    <tr>
+	      <td>
+                <span class="fineprint">
+                  <?php print poweredBy() ?>
+                </span>
     <?php 
     if (! isset($GALLERY_EMBEDDED_INSIDE) || $gallery->app->devMode == 'yes') {
 	    global $id;
@@ -25,12 +26,16 @@
 	    print album_validation_link($gallery->session->albumName, $id);
 	    print "Not valid yet.";
     } ?>
-    </td>
-	  </tr></table>
-
-    </td>
+              </td>
+	    </tr>
+	  </table>
+        </td>
+      </tr>
+    </table>
+  </td>
   </tr>
 </table>
+
 <?php
 includeHtmlWrap("wrapper.footer");
 ?>
