@@ -114,6 +114,15 @@ TD, P
 	{ 
 	  font-size: 12px; 
 	}
+.navtableborderbegin
+	{
+	  border:1px solid #000000;
+	}
+.navtableborderend
+	{
+	  border:1px solid #000000;
+	  border-top-width:0px;
+	}
 .bordertop
 	{
 	  border:1px solid #000000;
@@ -154,7 +163,6 @@ TD, P
 	}
 .modnavbox  /* main navigation bar next and previous */
 	{
-	  border:1px solid #000000;
 	}
 .admin                          /* used in admin bars */
 	{ 
@@ -172,11 +180,11 @@ TD, P
 	}
 .modnavboxtop  /*navagation bar top of screen where admin buttons show*/
 	{
-          border:1px solid #000000;
+ 
         }
 .modnavboxmid  /*navagation bar middle where the link for the albums show*/
 	{
-	  border:1px solid #000000;
+
 	}
 .modfooter /*footer where the Gallery version is located*/
 	{
