@@ -1,3 +1,14 @@
+2003-10-18  John Kirkland  <jpk@bl.org> 1.4.1-cvs-b175
+
+	* Centered "add comment" when there are comments present.
+
+	* Fixed bolded lines between navigation tables.
+
+	* Minor tweak in printNestedVals to make albums lists show
+	  up just a tad faster.
+
+	* Made modcaption css style work better in Konqueror & Mozilla.
+
 2003-10-18  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b174
 
 	* Added a missing space in the ImageMagick execution code that
